Jenkins: increase splits for simulator-dtest to 2 (support for multiple splits is added) and for test-burn to 4
Patch by Dmitry Konstantinov; reviewed by Michael Semb Wever, Jyothsna Konisa for CASSANDRA-21082